# AI-Feedly-Curator

./: .coverage  .env.example  .gitignore  AGENTS.md  COVERAGE.md  GEMINI.md  README.md  TODO.md  article_analyzer.py  article_fetcher.py  config.py  feedly_client.py  feedly_filter.py  feedly_tui.py  llm_analyzer.py  mark_36kr_read.py  prompt-template.md  pyproject.toml  regenerate_summary.py  requirements.txt  rss.opml  rss_scores.db  run_log.txt  utils.py  verify_scoring.py
.github/workflows/: ci.yml
extension/: background.js  content.js  manifest.json  options.html  options.js  sidepanel.html  sidepanel.js
native_host/: feedly_ai_overlay.json  feedly_native_host.py  wrapper.bat
rss_analyzer/: __init__.py  article_fetcher.py  cache.py  config.py  feedly_client.py  llm_analyzer.py  scoring.py  streamlit_app.py  utils.py  vector_store.py
scripts/: clean_start.py  cleanup_vector_store.py  install_native_host.ps1  migrate_to_vector_store.py  migrate_to_vector_store_complete.py  repair_vector_metadata.py  test_vector_store.py  vector_viewer.py
src/: feedly_client.py  llm_analyzer.py
src/rss_opml/: __init__.py
tests/: test_article_fetcher.py  test_config.py  test_env_loading.py  test_feedly_client.py  test_llm_analyzer.py  test_real_semantic_search.py  test_scoring.py  test_semantic_search_filtering.py  test_utils.py
