[project]
name = "rss-opml"
version = "0.1.0"
description = "AI-Feedly-Curator: AI-driven RSS analyzer and TUI"
readme = "README.md"
authors = [
    { name = "coolxll", email = "coolxll@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.1",
    "httpx[socks]>=0.28.1",
    "openai>=2.17.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "socksio>=1.0.0",
    "trafilatura>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
